Many bugfixes IRST LM wrapper changes Fixed logger functions Implemented Kryo serialization, hopefully it works well Implemented incremental crawling Implemented basic Lucene search functionality, can index and search